--- a/presentations.html
+++ b/presentations.html
@@ -37,12 +37,13 @@
 <hr>
 <h2>Gordon Research Conference</h2>
 
-<p align="center">
-  <img src="./Figures/GRC_Summer2022.png" width = "100%"/>
-</p>
+<div align="center">
+    <img src="./Figures/GRC_Summer2022.png" width = "100%"/>
+    <a href = "./Figures/GRC_Summer2022.png">Download the poster!</a>
+<br>
 
 <h2>American Chemical Society Spring 2022</h2>
-Pesticides in Minnesota’s Surface and Groundwater: Neonicotinoids, Fipronil, and Key Transformation Products.
+Pesticides in Minnesota’s Surface and Groundwater: Neonicotinoids, Fipronil, and Key Transformation Products.
 
 <h2>American Chemical Society Spring 2021</h2>
 Neonicotinoids Insecticides in Minnesota Surface and Groundwater: Occurrence, Trends, and Future Work 
