--- a/currentprojects.html
+++ b/currentprojects.html
@@ -21,7 +21,7 @@
   <h1 align="center">Research Interests</h1>
 </div>
 
-<nav style="padding: 15px;" >
+<nav style="padding: 15px;" class="topnav">
     <ul>
       <li><a href="index.html">Welcome</a></li>
       <li><a href="cv.html">Circum Vitae</a></li>
