--- a/presentations.html
+++ b/presentations.html
@@ -9,17 +9,11 @@
 
 <body>
 
-<style>
-  .bottom-three {
-     margin-bottom: 2cm;
-  }
-</style>
-
 <div style="background-color:#7a0019;padding:15px;padding:15px;color:#ffcc33;font-family:'Geneva';">
   <h1 align="center">Recent Publications and Presentations</h1>
 </div>
 
-<nav style="padding: 15px;" >
+<nav style="padding: 15px;" class="topnav">
   <ul>
     <li><a href="index.html">Welcome</a></li>
     <li><a href="cv.html">Circum Vitae</a></li>
