--- a/presentations.html
+++ b/presentations.html
@@ -13,17 +13,28 @@
   <h1 align="center">Recent Publications and Presentations</h1>
 </div>
 
-<nav style="padding: 15px;" class="topnav">
-  <ul>
-    <li><a href="index.html">Welcome</a></li>
-    <li><a href="cv.html">Circum Vitae</a></li>
-    <li><a href="acknowledgement.html">Acknowledgements</a></li>
-    <li><a href="currentprojects.html">Research Interests</a></li>
-    <li><a href="presentations.html">Recent Presentation</a></li>
-    <li><a href="https://williamarnold.org">Arnold Lab Website</a></li>
-    <li><a href="landacknowledgements.html">Land Acknowledgement</a></li>
-  </ul>
-</nav>
+<ul id="nav_ul">
+    <li class="parent"><a href="index.html">Welcome</a></li>
+    <li class="parent"><a href="#">Research Interest</a>
+            <ul class="child">
+            <li class="parent"><a href="index.html">What are Neonicotinoids and Fiproles</a></li>
+            <li class="parent"><a href="index.html">Pesticides in Surface Water</a></li>
+            <li class="parent"><a href="index.html">Pesticides in Groundwater</a></li>
+            <li class="parent"><a href="index.html">Pesticides in Engineered Treatment Systems</a></li>
+            <li class="parent"><a href="index.html">Composting Systems</a></li>
+            </ul>
+    </li>
+    <li class="parent"><a href="cv.html">Circum Vitae</a></li>
+    <li class="parent"><a href="presentations.html">Recent Presentations</a></li>
+    <li class="parent"><a href="landacknowledgements.html">Land Acknowledgement</a></li>
+    <li class="parent"><a href="https://williamarnold.org">Arnold Lab Website</a></li>
+    <li class="parent"><a href="index.html">Contact Me</a></li>
+</ul>
+
+<br>
+
+<div style="background-color:#df9eab;padding:0pt;height:35px;width:100vw;position:relative;top:-25px;z-index: -999">
+</div>
 
 <div style="margin-left: 15pt;margin-right:15pt">
 
