--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -21,23 +21,25 @@
   <h1 align="center">Acknowledgements</h1>
 </div>
 
+
 <ul id="nav_ul">
     <li class="parent"><a href="index.html">Welcome</a></li>
     <li class="parent"><a href="#">Research Interest</a>
             <ul class="child">
-            <li class="parent"><a href="index.html">What are Neonicotinoids and Fiproles</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Surface Water</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Groundwater</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Engineered Treatment Systems</a></li>
-            <li class="parent"><a href="index.html">Composting Systems</a></li>
+            <li class="parent"><a href="currentprojects.html">What are Neonicotinoids and Fiproles</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Surface Water</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Groundwater</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a></li>
+            <li class="parent"><a href="ComingSoon.html">Composting Systems</a></li>
             </ul>
     </li>
     <li class="parent"><a href="cv.html">Circum Vitae</a></li>
     <li class="parent"><a href="presentations.html">Recent Presentations</a></li>
+    <li class="parent"><a href="acknowledgement.html">Acknowledgements</a></li>
     <li class="parent"><a href="landacknowledgements.html">Land Acknowledgement</a></li>
     <li class="parent"><a href="https://williamarnold.org">Arnold Lab Website</a></li>
-    <li class="parent"><a href="index.html">Contact Me</a></li>
-</ul>
+    <li class="parent"><a href="contact.html">Contact Me</a></li>
+  </ul>
 
 <br>
 
@@ -82,7 +84,7 @@
 
 
 <hr>
-Last Updated: 2022.08.02
+Last Updated: 2022.08.23
 
 </div>
 </body>
