--- a/presentations.html
+++ b/presentations.html
@@ -17,19 +17,20 @@
     <li class="parent"><a href="index.html">Welcome</a></li>
     <li class="parent"><a href="#">Research Interest</a>
             <ul class="child">
-            <li class="parent"><a href="index.html">What are Neonicotinoids and Fiproles</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Surface Water</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Groundwater</a></li>
-            <li class="parent"><a href="index.html">Pesticides in Engineered Treatment Systems</a></li>
-            <li class="parent"><a href="index.html">Composting Systems</a></li>
+            <li class="parent"><a href="currentprojects.html">What are Neonicotinoids and Fiproles</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Surface Water</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Groundwater</a></li>
+            <li class="parent"><a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a></li>
+            <li class="parent"><a href="ComingSoon.html">Composting Systems</a></li>
             </ul>
     </li>
     <li class="parent"><a href="cv.html">Circum Vitae</a></li>
     <li class="parent"><a href="presentations.html">Recent Presentations</a></li>
+    <li class="parent"><a href="acknowledgement.html">Acknowledgements</a></li>
     <li class="parent"><a href="landacknowledgements.html">Land Acknowledgement</a></li>
     <li class="parent"><a href="https://williamarnold.org">Arnold Lab Website</a></li>
-    <li class="parent"><a href="index.html">Contact Me</a></li>
-</ul>
+    <li class="parent"><a href="contact.html">Contact Me</a></li>
+  </ul>
 
 <br>
 
@@ -38,26 +39,55 @@
 
 <div style="margin-left: 15pt;margin-right:15pt">
 
-<h1>Recent Presentations</h1>
+<h1>Posters:</h1>
 <hr>
-<h2>Gordon Research Conference</h2>
+<hr>
+<br>
+<h2>Gordon Research Conference: Environmental Science, Waters:</h2>
+<br>
+
 
 <div align="center">
     <img src="./Figures/GRC_Summer2022.png" width = "100%"/>
-    <a href = "./Figures/GRC_Summer2022.png">Download the poster!</a>
+    <br>
+    <buttonGRC type="button" align="right" onclick="location.href='./Figures/GRC_Summer2022.png'"> Download the poster!</buttonGRC>
+
 <br>
 
-<h2>American Chemical Society Spring 2022</h2>
-Pesticides in Minnesota’s Surface and Groundwater: Neonicotinoids, Fipronil, and Key Transformation Products.
+<div style="text-align: left">
 
-<h2>American Chemical Society Spring 2021</h2>
-Neonicotinoids Insecticides in Minnesota Surface and Groundwater: Occurrence, Trends, and Future Work 
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- CV: Presentations --> 
 
-<h1>Recent Awards</h1>
+<h1 style="text-align:left">Presentations:</h1> 
+<hr>
+<hr>
+<br>
+
+<b>Poster Presentation</b>, “Evaluation of Neonicotinoid and Fipronil Insecticides in Minnesota's Drinking and Wastewater Treatment Plants”, <em>Gordon Research Conference: Environmental Science: Waters</em>, June 19-22 <br><br>
+<b>Poster Presentation</b>, “Evaluation of Neonicotinoid and Fipronil Insecticides in Minnesota's Drinking and Wastewater Treatment Plants”, <em>Gordon Research Series: Environmental Science: Waters</em>, Holderness, NH. June 17-18. <br><br>
+<b>Oral Presentation</b>, “Pesticides in Minnesota’s Surface and Groundwater: Neonicotinoids, Fipronil, and Key Transformation Products.”, <em>American Chemical Society</em>: Spring 2022. San Diego, CA. March 22-24. <br><br>
+<b>Oral Presentation (Virtual)</b>, “Neonicotinoids Insecticides in Minnesota Surface and Groundwater: Occurrence, Trends, and Future Work”, <em>American Chemical Society: Spring 2021</em>. Virtual.  April 5-16. <br><br>
+<b>Oral Lecture</b>, “Neonicotinoids Insecticides in Minnesota Surface and Groundwater: Occurrence, Trends, and Future Work". <em>University of Minnesota Environmental Engineering Seminar Series</em>. Spring, 2021. <br>
+<br>
+
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- CV: Awards --> 
+
+<h1>Awards:</h1>
+<hr>
+<hr>
+<br>
 
 Thank you to the <a href = "https://www.compostfoundation.org/Research/College-Scholarships">Compost Research and Educational Foundation</a> for their generous contributions in recognition of my research on pesticide fate in commercial composting operations!
 
-<h1>Publications</h1>
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- CV: Relevent Publications --> 
+
+<h1>Related Publications:</h1>
+<hr>
+<hr>
+<br>
 
 Take a look at the interesting work going on in the <a href = "https://williamarnold.org">Arnold Lab Group</a>! Our latest work are listed below:
 <br>
@@ -74,7 +104,8 @@ Todey, S.A., Fallon, A.M., Arnold, W.A. <a href = "https://doi.org/10.1002/etc.4
 
 
 <hr>
-Last Updated: 2022.08.02
+Last Updated: 2022.08.23
+</div>
 
 </div>
 </body>
