--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width= device-width, initital-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
@@ -17,9 +17,11 @@
 </style>
 
 
-<div style="background-color:#7a0019;padding:15px;padding:15px;color:#ffcc33;font-family:'Geneva';">
-  <h1 align="center">Native American Land Acknowledgement</h1>
+<div style="background-color:#7a0019;padding:15px;color:#ffcc33;font-family:'Geneva';">
+  <h1 align="center">Goedjen Personal Research Website</h1>
+  <p align="center"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p>
 </div>
+
 
 <ul id="nav_ul">
   <li class="parent"><a href="index.html">Welcome</a></li>
@@ -47,29 +49,23 @@
 
 <div style="margin-left: 15pt;margin-right:15pt">
 
+
+  <h1>Contact Information</h1>
+  <hr>
+  <br>
+  <h2>Email</h2>
+  <br>
+  Questions about my research? Reach out to me by <a href = "mailto:Goedj011@umn.edu">email</a>
   <br><br>
+  <h2>Arnold Lab Website</h2>
+  <br>
+  See the latest work going on our <a href = "https://williamarnold.org">lab website</a>
 
-
-<br>
-
-
-
-<div class="row" style="width:1000px;margin:auto">
-  <div class="column">
-    <div align="center"><img width="66%" align="center" src="https://www.dot.state.mn.us/tribaltraining/images/mn_reservations_map.jpg" alt="Minnisota Native Tribal Lands">
-    </div>
-  </div>
-  <div class="column">
-    <h2 align="center">Dakota Souix and Ojibwe Land Acknowledgement</h2>
-    <p>We acknowledge that much of our research is conducted on tribal land within the traditional homelands of the Dakota Sioux and Ojibwe people. It is important to acknowledge the peoples on whose land we live, learn, and work as we seek to improve and strengthen our relations with our tribal nations. </p> 
-    <p> We also acknowledge that words are not enough. We must ensure that the Unviersity of Minnesota provides support, resources, and programs that increase access to all aspects of higher education for our American Indian students, staff, faculty, and community members.
-    </p>
-  </div>
-</div>
-
-
+<br><br>
 <hr>
-  Last Updated: 2022.08.23
+Last Updated: 2022.08.23
+<br><br>
+<br><br>
 
 </div>
 </body>
