fixed contact banner

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
 </style>
 
 
-<div style="background-color:#7a0019;padding:15px;color:#ffcc33;font-family:'Geneva';">
-  <h1 align="center">Goedjen Personal Research Website</h1>
-  <p align="center"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p>
+<div style="background-color:#7a0019;padding:15px;padding:15px;color:#ffcc33;font-family:'Geneva';">
+  <h1 align="center">Contact Me!</h1>
 </div>
+
 
 
 <ul id="nav_ul">
